// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrBanner renders a right-icon 1`] = `
<div
  class="cdr-banner cdr-banner--default"
>
  <div
    class="cdr-banner__wrapper undefined"
  >
    <div
      class="cdr-banner__main"
    >
      <div
        class="cdr-banner__icon-left"
      >
        
        
        <div />
        
        
      </div>
      <span
        class="cdr-banner__message"
      >
        
        hey im a banner
        
      </span>
      <div
        class="cdr-banner__icon-right"
      >
        
        
        <div />
        
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`CdrBanner renders correctly 1`] = `
<div
  class="cdr-banner cdr-banner--default"
>
  <div
    class="cdr-banner__wrapper undefined"
  >
    <div
      class="cdr-banner__main"
    >
      <div
        class="cdr-banner__icon-left"
      >
        
        
        <div />
        
        
      </div>
      <span
        class="cdr-banner__message"
      >
        
        hey im a banner
        
      </span>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`CdrBanner renders the info-action slot 1`] = `
<div
  class="cdr-banner cdr-banner--default"
>
  <div
    class="cdr-banner__wrapper undefined"
  >
    <div
      class="cdr-banner__main"
    >
      <div
        class="cdr-banner__icon-left"
      >
        
        
        <div />
        
        
      </div>
      <span
        class="cdr-banner__message"
      >
        
        hey im a banner
        
      </span>
      <div
        class="cdr-banner__icon-right"
      >
        
        
        <div />
        
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="cdr-banner__info-action"
  >
    
    
    <div />
    
    
  </div>
</div>
`;

exports[`CdrBanner renders the message-body slot 1`] = `
<div
  class="cdr-banner cdr-banner--default"
>
  <div
    class="cdr-banner__wrapper cdr-banner__wrapper--prominence"
  >
    <div
      class="cdr-banner__main"
    >
      <div
        class="cdr-banner__icon-left"
      >
        
        
        <div />
        
        
      </div>
      <span
        class="cdr-banner__message"
      >
        
        hey im a banner
        
      </span>
      <!--v-if-->
    </div>
    <div
      class="cdr-banner__message-body"
    >
      
      and I am some extra information
      
    </div>
  </div>
  <!--v-if-->
</div>
`;
